Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,64 @@
     */
     const newsData = [
   {
+    "title": "Gần 700 tấn quặng đất hiếm bị buôn lậu sang Trung Quốc: Ngụy trang trong vỏ bao gạo",
+    "content": "Gần 700 tấn quặng đất hiếm đã bị buôn lậu sang Trung Quốc, được ngụy trang trong vỏ bao gạo. Cơ quan điều tra đã truy tố 27 bị can liên quan đến vụ án, trong đó có nhiều cựu quan chức Bộ Tài nguyên và Môi trường. Các bị can đã thực hiện hành vi buôn lậu này từ năm 2021, sử dụng các hợp đồng giả mạo để xuất khẩu đất hiếm dưới dạng hàng hóa khác.",
+    "link": "https://tuoitre.vn/gan-700-tan-quang-dat-hiem-bi-buon-lau-sang-trung-quoc-nguy-trang-trong-vo-bao-gao-20250312070718824.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Có bao nhiêu tấn quặng đất hiếm bị buôn lậu sang Trung Quốc?",
+    "answers": [
+      {
+        "text": "Gần 700 tấn",
+        "correct": true
+      },
+      {
+        "text": "500 tấn",
+        "correct": false
+      },
+      {
+        "text": "300 tấn",
+        "correct": false
+      },
+      {
+        "text": "1000 tấn",
+        "correct": false
+      },
+      {
+        "text": "200 tấn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bình Nhưỡng cảnh báo nguy cơ xung đột nhấn chìm bán đảo Triều Tiên",
+    "content": "Triều Tiên đã đưa ra cảnh báo nghiêm trọng về nguy cơ xung đột vũ trang trên bán đảo Triều Tiên, đặc biệt sau vụ máy bay chiến đấu Hàn Quốc vô tình thả bom vào khu vực dân sự, gây thương tích cho nhiều người. Hãng thông tấn KCNA nhấn mạnh rằng sự cố này có thể dẫn đến một cuộc xung đột nếu các cuộc tập trận quân sự chung giữa Mỹ và Hàn Quốc không được dừng lại. Họ cảnh báo rằng tình hình an ninh đang trở nên tồi tệ hơn và kêu gọi đình chỉ các cuộc tập trận này.",
+    "link": "https://dantri.com.vn/the-gioi/binh-nhuong-canh-bao-nguy-co-xung-dot-nhan-chim-ban-dao-trieu-tien-20250312070127970.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Bình Nhưỡng đã cảnh báo điều gì về tình hình an ninh trên bán đảo Triều Tiên?",
+    "answers": [
+      {
+        "text": "Nguy cơ xung đột vũ trang",
+        "correct": true
+      },
+      {
+        "text": "Tình hình an ninh ổn định",
+        "correct": false
+      },
+      {
+        "text": "Cải cách quân sự",
+        "correct": false
+      },
+      {
+        "text": "Hợp tác quốc tế tăng cường",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Toyota sẽ ra mắt 6 xe điện mới tới 2026",
     "content": "Toyota dự kiến sẽ ra mắt 6 mẫu xe điện mới đến hết năm 2026, bên cạnh 3 sản phẩm xe điện của thương hiệu Lexus. Những thông tin này được công bố trong sự kiện chiến lược sản phẩm tại Brussels, Bỉ. Để đạt được mục tiêu trung hòa carbon, Toyota sẽ tiếp tục phát triển đa dạng các dòng xe, từ xe thuần điện đến hybrid và động cơ đốt trong. Hãng cũng đang nghiên cứu các công nghệ mới như pin nhiên liệu và xe chạy bằng hydro nhằm giảm thiểu khí thải.",
     "link": "https://vnexpress.net/toyota-se-ra-mat-6-xe-dien-moi-toi-2026-4859866.html",
@@ -610,37 +668,6 @@
     ]
   },
   {
-    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
-    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
-    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
-    "answers": [
-      {
-        "text": "Malaysia",
-        "correct": true
-      },
-      {
-        "text": "Việt Nam",
-        "correct": false
-      },
-      {
-        "text": "Thái Lan",
-        "correct": false
-      },
-      {
-        "text": "Indonesia",
-        "correct": false
-      },
-      {
-        "text": "Philippines",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
     "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
     "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
@@ -694,6 +721,37 @@
       },
       {
         "text": "Họ không tin vào bác sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
+    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
+    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
+    "answers": [
+      {
+        "text": "Malaysia",
+        "correct": true
+      },
+      {
+        "text": "Việt Nam",
+        "correct": false
+      },
+      {
+        "text": "Thái Lan",
+        "correct": false
+      },
+      {
+        "text": "Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Philippines",
         "correct": false
       }
     ]
@@ -1665,6 +1723,33 @@
     ]
   },
   {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -1691,33 +1776,6 @@
       },
       {
         "text": "Người có bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -2643,6 +2701,33 @@
     ]
   },
   {
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra tình trạng thừa cân.",
+        "correct": false
+      },
+      {
+        "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
     "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
     "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
@@ -2692,33 +2777,6 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra tình trạng thừa cân.",
-        "correct": false
-      },
-      {
-        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
