Update generated content

--- a/home.html
+++ b/home.html
@@ -179,6 +179,68 @@
     ]
   },
   {
+    "title": "Mức tiêu hao nhiên liệu thực tế của Santa Fe máy xăng?",
+    "content": "Mức tiêu hao nhiên liệu của xe Santa Fe bản 2.5 máy xăng là vấn đề được nhiều người quan tâm, đặc biệt là những ai có nhu cầu sử dụng xe cho việc đi làm hàng ngày và di chuyển về quê. Người dùng Tiến Anh muốn biết mức tiêu hao nhiên liệu thực tế trong điều kiện đường hỗn hợp. Các độc giả có kinh nghiệm sẽ chia sẻ thông tin và đánh giá về mức tiêu hao nhiên liệu của dòng xe này.",
+    "link": "https://vnexpress.net/muc-tieu-hao-nhien-lieu-thuc-te-cua-santa-fe-may-xang-4860123.html",
+    "cat": "oto-xe-may",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Mức tiêu hao nhiên liệu thực tế của Santa Fe máy xăng là bao nhiêu?",
+    "answers": [
+      {
+        "text": "Khoảng 10-12 lít/100km",
+        "correct": true
+      },
+      {
+        "text": "Khoảng 8-10 lít/100km",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 12-14 lít/100km",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 6-8 lít/100km",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 14-16 lít/100km",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Môtô chạy ẩu đốn ngã hai xe máy",
+    "content": "Một vụ tai nạn xảy ra ở Maharashtra, Ấn Độ khi chiếc môtô Hero XPulse vượt đèn đỏ đã đâm vào hai xe máy, làm ngã tổng cộng 7 người. Vụ việc được ghi lại bằng camera gắn trên mũ bảo hiểm của một tay lái khác. Mặc dù có nhiều người bị thương, nhưng may mắn họ chỉ bị trầy xước nhẹ. Một số người trong số họ không đội mũ bảo hiểm khi tham gia giao thông.",
+    "link": "https://vnexpress.net/moto-chay-au-don-nga-hai-xe-may-4859596.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Vụ tai nạn môtô ở Ấn Độ gây ra bao nhiêu người bị thương?",
+    "answers": [
+      {
+        "text": "7 người",
+        "correct": true
+      },
+      {
+        "text": "5 người",
+        "correct": false
+      },
+      {
+        "text": "10 người",
+        "correct": false
+      },
+      {
+        "text": "3 người",
+        "correct": false
+      },
+      {
+        "text": "4 người",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bình Nhưỡng cảnh báo nguy cơ xung đột nhấn chìm bán đảo Triều Tiên",
     "content": "Triều Tiên đã đưa ra cảnh báo nghiêm trọng về nguy cơ xung đột vũ trang trên bán đảo Triều Tiên, đặc biệt sau vụ máy bay chiến đấu Hàn Quốc vô tình thả bom vào khu vực dân sự, gây thương tích cho nhiều người. Hãng thông tấn KCNA nhấn mạnh rằng sự cố này có thể dẫn đến một cuộc xung đột nếu các cuộc tập trận quân sự chung giữa Mỹ và Hàn Quốc không được dừng lại. Họ cảnh báo rằng tình hình an ninh đang trở nên tồi tệ hơn và kêu gọi đình chỉ các cuộc tập trận này.",
     "link": "https://dantri.com.vn/the-gioi/binh-nhuong-canh-bao-nguy-co-xung-dot-nhan-chim-ban-dao-trieu-tien-20250312070127970.htm",
@@ -345,37 +407,6 @@
     ]
   },
   {
-    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
-    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
-    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
-    "cat": "gia-dinh",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
-    "answers": [
-      {
-        "text": "Hát Quốc ca Việt Nam",
-        "correct": true
-      },
-      {
-        "text": "Đọc thơ bằng tiếng Nhật",
-        "correct": false
-      },
-      {
-        "text": "Nhảy múa cùng cô dâu",
-        "correct": false
-      },
-      {
-        "text": "Chơi nhạc cụ truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức tiệc lớn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cuộc chiến giữa bác sĩ thật với 'lang băm TikTok'",
     "content": "Bài viết phản ánh tình trạng bệnh nhân từ chối điều trị y tế do tin tưởng vào thông tin sai lệch trên TikTok, dẫn đến những hậu quả nghiêm trọng. Hai trường hợp điển hình là một phụ nữ mắc ung thư vú và một đàn ông mắc ung thư trực tràng đã từ chối can thiệp y tế, dẫn đến tình trạng sức khỏe nghiêm trọng và cuối cùng là sự ra đi của họ. Các bác sĩ bày tỏ lo ngại về sự lan rộng của các phương pháp chữa bệnh không chính thống và kêu gọi người dân cần thận trọng trong việc tìm kiếm thông tin sức khỏe trên mạng xã hội.",
     "link": "https://vnexpress.net/cuoc-chien-giua-bac-si-that-voi-lang-bam-tiktok-4855158.html",
@@ -429,6 +460,37 @@
       },
       {
         "text": "Philippines",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
+    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
+    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
+    "cat": "gia-dinh",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
+    "answers": [
+      {
+        "text": "Hát Quốc ca Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Đọc thơ bằng tiếng Nhật",
+        "correct": false
+      },
+      {
+        "text": "Nhảy múa cùng cô dâu",
+        "correct": false
+      },
+      {
+        "text": "Chơi nhạc cụ truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức tiệc lớn",
         "correct": false
       }
     ]
@@ -1400,6 +1462,33 @@
     ]
   },
   {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -1426,33 +1515,6 @@
       },
       {
         "text": "Người có bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
