Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,126 @@
     */
     const newsData = [
   {
+    "title": "Hoa gạo nở đỏ rực trong công viên mang tên cố Tổng Bí thư Lê Duẩn",
+    "content": "Công viên mang tên cố Tổng Bí thư Lê Duẩn ở TP Đông Hà đang thu hút sự chú ý của người dân với cây hoa gạo nở đỏ rực vào tháng 3. Cây hoa gạo lâu năm này cao khoảng 10m và có tán rộng, tạo nên khung cảnh đẹp mắt cho công viên. Nhiều người dân đến đây để tập thể dục và thưởng thức vẻ đẹp của hoa gạo, đồng thời tưởng nhớ đến cố Tổng Bí thư Lê Duẩn. Công viên còn có tượng đài của ông, nơi thường diễn ra các sự kiện văn hóa của tỉnh Quảng Trị.",
+    "link": "https://tuoitre.vn/hoa-gao-no-do-ruc-trong-cong-vien-mang-ten-co-tong-bi-thu-le-duan-20250310214339709.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cây hoa gạo nào đang nở rực ở công viên Lê Duẩn?",
+    "answers": [
+      {
+        "text": "Hoa gạo",
+        "correct": true
+      },
+      {
+        "text": "Hoa mai",
+        "correct": false
+      },
+      {
+        "text": "Hoa hồng",
+        "correct": false
+      },
+      {
+        "text": "Hoa nhài",
+        "correct": false
+      },
+      {
+        "text": "Hoa sen",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sun World và Vietravel hợp tác chiến lược",
+    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
+    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
+    "answers": [
+      {
+        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
+        "correct": true
+      },
+      {
+        "text": "Tăng giá vé vào cửa cho du khách.",
+        "correct": false
+      },
+      {
+        "text": "Giảm số lượng khách tham quan.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tổ chức tour du lịch trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
+    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
+    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dành cho người lớn tuổi",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động ngoài trời",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp dịch vụ mua sắm cao cấp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
+    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
+    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
+    "answers": [
+      {
+        "text": "1.000 cửa hàng",
+        "correct": true
+      },
+      {
+        "text": "500 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "2.000 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "800 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "1.500 cửa hàng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Gần 700 tấn quặng đất hiếm bị buôn lậu sang Trung Quốc: Ngụy trang trong vỏ bao gạo",
     "content": "Gần 700 tấn quặng đất hiếm đã bị buôn lậu sang Trung Quốc, được ngụy trang trong vỏ bao gạo. Cơ quan điều tra đã truy tố 27 bị can liên quan đến vụ án, trong đó có nhiều cựu quan chức Bộ Tài nguyên và Môi trường. Các bị can đã thực hiện hành vi buôn lậu này từ năm 2021, sử dụng các hợp đồng giả mạo để xuất khẩu đất hiếm dưới dạng hàng hóa khác.",
     "link": "https://tuoitre.vn/gan-700-tan-quang-dat-hiem-bi-buon-lau-sang-trung-quoc-nguy-trang-trong-vo-bao-gao-20250312070718824.htm",
@@ -2763,33 +2883,6 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
-    "answers": [
-      {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
-        "correct": false
-      },
-      {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
     "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
     "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
@@ -2812,6 +2905,33 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "answers": [
+      {
+        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "correct": false
+      },
+      {
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -2991,33 +3111,6 @@
     ]
   },
   {
-    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
-    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
-    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
-    "answers": [
-      {
-        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
-        "correct": true
-      },
-      {
-        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
-        "correct": false
-      },
-      {
-        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh không phải thi nếu không muốn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
     "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
@@ -3040,6 +3133,33 @@
       },
       {
         "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
+    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
+    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
+    "answers": [
+      {
+        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
+        "correct": true
+      },
+      {
+        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
+        "correct": false
+      },
+      {
+        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh không phải thi nếu không muốn.",
         "correct": false
       }
     ]
@@ -4737,99 +4857,6 @@
       },
       {
         "text": "Công ty Tesla không có sản phẩm mới nào ra mắt.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những việc không nên tiết kiệm",
-    "content": "Bài viết nhấn mạnh những việc không nên tiết kiệm trong cuộc sống hàng ngày, đặc biệt khi thu nhập giảm và chi phí sinh hoạt tăng. John Csiszar, một cố vấn tài chính, cảnh báo rằng việc chuyển về sống cùng bố mẹ, ở lại công việc độc hại, hay bỏ qua chăm sóc y tế có thể gây hại lớn đến sức khỏe và sự phát triển cá nhân. Ngoài ra, việc cắt giảm hoạt động xã hội và mua thực phẩm kém chất lượng cũng có thể dẫn đến những hậu quả nghiêm trọng về sức khỏe trong tương lai.",
-    "link": "https://vnexpress.net/nhung-viec-khong-nen-tiet-kiem-4859361.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Những việc nào không nên tiết kiệm trong cuộc sống hàng ngày?",
-    "answers": [
-      {
-        "text": "Chăm sóc sức khỏe",
-        "correct": true
-      },
-      {
-        "text": "Mua sắm quần áo",
-        "correct": false
-      },
-      {
-        "text": "Tiết kiệm điện nước",
-        "correct": false
-      },
-      {
-        "text": "Đi du lịch nhiều hơn",
-        "correct": false
-      },
-      {
-        "text": "Chi phí học hành",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lợi ích của kết quả xếp hạng học sinh THPT SchoolRank",
-    "content": "Kết quả xếp hạng học sinh THPT SchoolRank, ra mắt từ năm 2020, đã trở thành công cụ quan trọng giúp học sinh lớp 12 tự đánh giá năng lực học tập trước khi thi tốt nghiệp và chọn trường đại học. Công cụ này sử dụng phương pháp ATAR của Úc, cho phép học sinh biết được thứ hạng của mình so với toàn quốc, từ đó xây dựng kế hoạch học tập hiệu quả. Ngoài việc hỗ trợ đánh giá, SchoolRank còn mở ra cơ hội xét tuyển vào Đại học FPT và cấp học bổng cho học sinh có kết quả tốt.",
-    "link": "https://dantri.com.vn/giao-duc/loi-ich-cua-ket-qua-xep-hang-hoc-sinh-thpt-schoolrank-20250310211057755.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "SchoolRank mang lại những lợi ích gì cho học sinh lớp 12?",
-    "answers": [
-      {
-        "text": "Hỗ trợ tự đánh giá năng lực học tập và mở ra cơ hội xét tuyển vào đại học",
-        "correct": true
-      },
-      {
-        "text": "Giúp học sinh biết rõ điểm số từng môn học",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp thông tin về các trường đại học quốc tế",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ra trường nào có học phí thấp nhất",
-        "correct": false
-      },
-      {
-        "text": "Giúp học sinh tìm kiếm việc làm sau khi tốt nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phát hiện sớm chữa kịp thời, u não không là 'án tử'",
-    "content": "U não không còn là 'án tử' nhờ vào việc phát hiện sớm và điều trị kịp thời bằng các công nghệ hiện đại. Các bác sĩ cho biết nếu phát hiện u não khi còn nhỏ, khả năng loại bỏ hoàn toàn hoặc kiểm soát bệnh là rất cao. Phẫu thuật là lựa chọn hàng đầu cho u não lành tính, trong khi u ác tính cần áp dụng phác đồ đa mô thức để tăng tỷ lệ sống sót. Khuyến cáo khám sức khỏe định kỳ để phát hiện các dấu hiệu bất thường sớm.",
-    "link": "https://vnexpress.net/phat-hien-som-chua-kip-thoi-u-nao-khong-la-an-tu-4859385.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để phát hiện sớm u não và điều trị hiệu quả?",
-    "answers": [
-      {
-        "text": "Khám sức khỏe định kỳ và phát hiện sớm các triệu chứng.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần chờ đợi triệu chứng rõ ràng mới đi khám.",
-        "correct": false
-      },
-      {
-        "text": "Điều trị bằng thuốc không cần phẫu thuật.",
-        "correct": false
-      },
-      {
-        "text": "Không cần thiết phải khám nếu không có triệu chứng rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần tập thể dục thường xuyên để ngăn ngừa.",
         "correct": false
       }
     ]
